
#set module name
SET(CSF_MODULE_PROJECT_NAME "csf_ip_connect_factory")
SET(CSF_MODULE_LIBRARY_NAME ${CSF_MODULE_PROJECT_NAME})

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ")

SET(LIBRARY_OUTPUT_PATH ${CSF_PROJECT_OUTPUT_TOP_DIR}/${CSF_MODULE_PROJECT_NAME})


#add src source
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} CSF_SRC_FILES_LIST)

#get source in all sub directories
ALL_SOURCE_DIRECTORY_LIST(SUB_SRC_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})

FOREACH(SUB_SRC_DIRECTORY ${SUB_SRC_DIRECTORIES})
  ADD_SUBDIRECTORY(${SUB_SRC_DIRECTORY})
ENDFOREACH()

#add module library
IF(PC_PLATFORM STREQUAL "cpptestscan")

ADD_LIBRARY(${CSF_MODULE_LIBRARY_NAME} STATIC
		${CSF_SRC_FILES_LIST}
		)

ELSE()

ADD_LIBRARY(${CSF_MODULE_LIBRARY_NAME} SHARED 
		${CSF_SRC_FILES_LIST}
		)

ENDIF()


ADD_DEPENDENCIES(${CSF_MODULE_LIBRARY_NAME}
	${CSF_PROJECT_LIBRARY_STATIC_NAME})

TARGET_LINK_LIBRARIES(${CSF_MODULE_LIBRARY_NAME}
    ${CSF_PROJECT_LIBRARY_STATIC_NAME}
	${BOOST_LIBRARIES}
   )